<resources>

    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="share_message">Курс по Android-разработке в Практикуме:https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">6725475@gmail.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="terms_url">https://yandex.ru/legal/practicum_offer/ru/</string>

    <string name="search_placeholder">Результаты поиска будет здесь</string>

    <string name="empty_result">Ничего не нашлось</string>
    <string name="error_network_title">Проблемы со связью</string>
    <string name="error_network_subtitle">Загрузка не удалась.\nПроверьте подключение к интернету</string>
    <string name="retry_button">Обновить</string>
    
    <string name="clear_history">Очистить историю</string>
    <string name="user_search">Вы искали</string>

    <string name="cover">Обложка трека</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="play">Воспроизвести</string>
    <string name="pause">Пауза</string>
    <string name="add_to_favorite">Добавить в избранное</string>
    <string name="favorite">В избранном</string>
    <string name="progress_time_format">00:00</string>

    <string name="back">Назад</string>
    <string name="duration_label">Длительность</string>
    <string name="album_label">Альбом</string>
    <string name="year_label">Год</string>
    <string name="genre_label">Жанр</string>
    <string name="country_label">Страна</string>
    


</resources>