<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <!-- Заголовок с иконкой назад -->

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tbSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_back_arrow_24"
        app:navigationIconTint="@color/black"
        app:titleTextColor="@color/black"
        app:titleTextAppearance="@style/titles"
        app:title="@string/settings" />


    <!--темная тема-->

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/horizontal"
        android:paddingEnd="@dimen/horizontal"
        android:paddingTop="@dimen/top"
        android:paddingBottom="@dimen/top"
        android:textSize="@dimen/text_size_body"
        android:textColor="@color/black"

        android:text="@string/dark_theme" />

    <!-- Поделиться приложением -->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/horizontal"
        android:paddingEnd="@dimen/horizontal"
        android:paddingTop="@dimen/top"
        android:paddingBottom="@dimen/top"
        android:textSize="@dimen/text_size_body"
        android:textColor="@color/black"

        android:text="@string/share_app"
        android:drawableEnd="@drawable/ic_share_24"/>

    <!-- Написать в поддержку -->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/horizontal"
        android:paddingEnd="@dimen/horizontal"
        android:paddingTop="@dimen/top"
        android:paddingBottom="@dimen/top"
        android:textSize="@dimen/text_size_body"
        android:textColor="@color/black"

        android:text="@string/write_to_support"
        android:drawableEnd="@drawable/ic_support_24"/>

    <!-- Пользовательское соглашение -->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/horizontal"
        android:paddingEnd="@dimen/horizontal"
        android:paddingTop="@dimen/top"
        android:paddingBottom="@dimen/top"
        android:textSize="@dimen/text_size_body"
        android:textColor="@color/black"

        android:text="@string/user_agreement"
        android:drawableEnd="@drawable/ic_arrow_agreement_24"/>

</LinearLayout>