<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical">

    <!-- Заголовок с иконкой назад -->

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tbSearch"
        style="@style/TitleIcBack"
        app:title="@string/search" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/spacing_l"
        android:layout_marginEnd="@dimen/spacing_l"
        android:background="@drawable/search_edit_text_background">

        <!-- поле поиского запроса -->
        <EditText
            android:id="@+id/searchEditText"
            style="@style/SearchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:paddingVertical="@dimen/spacing_m"
            android:paddingStart="@dimen/spacing_xxxl" />

        <!--иконка лупа-->
        <ImageView
            style="@style/Icon"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/spacing_m"
            android:src="@drawable/ic_search_16"
            app:tint="?attr/searchTint" />

        <!--очистка иконка-->

        <ImageView
            android:id="@+id/clearButton"
            style="@style/Icon"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/spacing_m"
            android:src="@drawable/ic_clear_16"
            android:visibility="gone"
            app:tint="?attr/searchTint"
            tools:ignore="ContentDescription"
            tools:visibility="visible" />

    </FrameLayout>

    <!--история поиска -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/historyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size_54"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/user_search"
        android:textColor="?attr/colorOnSurface"
        android:textSize="@dimen/text_size_body_l"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <!--очистить историю-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearHistoryButton"
        style="@style/Widget.PlaylistMaker.Button.Retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_xxl"
        android:text="@string/clear_history"
        android:visibility="gone"
        tools:visibility="visible" />

    </LinearLayout>
</ScrollView>



<FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTracks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="@dimen/spacing_xxl"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <!--заглушка ничего не найдено-->

        <LinearLayout
            android:id="@+id/placeholderContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:theme="@style/ThemeOverlay.Placeholder"
            android:visibility="gone"
            tools:visibility="visible">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" />


            <ImageView
                android:id="@+id/placeholderImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/placeholderTitle"
                style="@style/TextAppearance.PlaylistMaker.Placeholder.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xxl" />


            <!--заглушка нет сети-->


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/errorSubtitle"
                style="@style/TextAppearance.PlaylistMaker.Placeholder.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_s" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/retryButton"
                style="@style/Widget.PlaylistMaker.Button.Retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xxl"
                android:text="@string/retry_button" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_none"
                android:layout_weight="0.2" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>